# HeadsetKontrol

./: .gitignore  CMakeLists.txt  LICENSE  README.md  dependencies.txt  headsetkontrol.desktop  headsetkontrol.notifyrc  resources.qrc
qml/: MainPage.qml  main.qml
qml/AppComponents/: GroupBox.qml
qml/SettingsPage/: GeneralSettingsPage.qml
res/: resources.qrc
res/desktop/: com.github.headsetkontrol.autostart.desktop  com.github.headsetkontrol.desktop
res/icons/inkscape/: export.py
res/inkscape/: export.py
res/ui/: MainPage.qml  main.qml
res/ui/SettingsPage/: GeneralSettingsPage.qml
src/: CMakeLists.txt  appcontroller.cpp  appcontroller.h  config.cpp  config.h  headsetcontrol.cpp  headsetcontrol.h  headsetcontroldevice.cpp  headsetcontroldevice.h  headsetcontroldevicebattery.cpp  headsetcontroldevicebattery.h  headsetkontrolapplication.cpp  headsetkontrolapplication.h  headsetkontrolconfig.cpp  headsetkontrolconfig.h  headsetkontrolconfig.kcfg  headsetkontrolconfig.kcfgc  headsetkontrolconfigbase.kcfg  headsetkontrolconfigbase.kcfgc  headsetkontrolnotifieritem.cpp  headsetkontrolnotifieritem.h  headsetkontroltrayicon.cpp  headsetkontroltrayicon.h  main.cpp  processqueue.cpp  processqueue.h  resources.qrc  trayicon.cpp  trayicon.h
src/contents/ui/: AboutSettingsPage.qml  DeviceDetailPage.qml  DevicesPage.qml  FormSliderDelegate.qml  FormTextFieldWithButtonDelegate.qml  GeneralSettingsPage.qml  HeadsetControlSettingsPage.qml  Main.qml  SettingsView.qml
src/contents/ui/SettingsPage/: SettingsPage.qml
src/resources/ui/: MainPage.qml  main.qml
src/resources/ui/AppComponents/: GroupBox.qml
src/resources/ui/HeadsetKontrol/: GroupBox.qml
src/resources/ui/SettingsPage/: AboutSettingsPage.qml  GeneralSettingsPage.qml  NotificationSettingsPage.qml  SettingsPage.qml
translation/: CMakeLists.txt  Progress.md  merge.sh  template.pot  vi.po
